[gd_scene load_steps=6 format=3 uid="uid://bks1tp7iiyda"]

[ext_resource type="Script" uid="uid://vi83nr4v8wfk" path="res://scripts/ui/main_menu.gd" id="1_sl1te"]
[ext_resource type="FontFile" uid="uid://bydt2xc6trnm0" path="res://assets/fonts/Squares.ttf" id="2_fe2o3"]

[sub_resource type="Gradient" id="Gradient_fe2o3"]
offsets = PackedFloat32Array(0.00324675, 1)
colors = PackedColorArray(0.403922, 0.647059, 0.388235, 1, 0.062465, 0.170364, 0.100488, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_sl1te"]
gradient = SubResource("Gradient_fe2o3")

[sub_resource type="LabelSettings" id="LabelSettings_1g8jr"]
font = ExtResource("2_fe2o3")
font_size = 24

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 8.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sl1te")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_sl1te")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = -740.0
offset_top = -425.0
offset_right = -321.0
offset_bottom = -40.0
color = Color(0.337255, 0.556863, 0.333333, 1)

[node name="ColorRect2" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = -239.0
offset_top = 213.0
offset_right = 10.0
offset_bottom = 608.0
color = Color(0.239216, 0.415686, 0.25098, 1)

[node name="ColorRect3" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 370.0
offset_top = -172.0
offset_right = 748.0
offset_bottom = 45.0
color = Color(0.0823529, 0.196078, 0.113725, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "SUPER FROG BROS"
label_settings = SubResource("LabelSettings_1g8jr")

[node name="Play" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 75)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_fe2o3")
theme_override_font_sizes/font_size = 12
text = "Play"

[node name="Options" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 75)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_fe2o3")
theme_override_font_sizes/font_size = 12
text = "Options"

[node name="QuitGame" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 75)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_fe2o3")
theme_override_font_sizes/font_size = 12
text = "Quit Game"

[connection signal="item_rect_changed" from="." to="." method="_on_item_rect_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitGame" to="." method="_on_quit_game_pressed"]
